force-app/main/default/objects/Twitter_Publication__c/Twitter_Publication__c.object-meta.xml
<CustomObject>
    <label>Twitter Publication</label>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Twitter Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twitter Publication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>