force-app/main/default/objects/Twitter_Publication__c/fields/Post_Link__c.field-meta.xml
<CustomField>
    <fullName>Post_Link__c</fullName>
    <label>Post Link</label>
    <type>Url</type>
</CustomField>