force-app/main/default/objects/Twitter_Publication__c/fields/Post_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_Title__c</fullName>
    <label>Post Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>