force-app/main/default/objects/Twitter_Publication__c/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <type>DateTime</type>
</CustomField>